--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>matias silva blog</title>
   </head>
   <body>
-    <h1>titulo del blog</h1>
-    <p>parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, suscipit.</p>
+    <div class="container">
+      <div id="post">
+        <h1>titulo del blog</h1>
+        <p>
+          parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Ratione, suscipit.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
