--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div class="container">
+      <div id="cabecera">
+        Cabecera
+      </div>
       <div id="post">
         <h1>titulo del blog</h1>
         <p>
