finalizalada la cabecera con diseño azul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div id="cabecera">
-        Cabecera
+        Hyperblog
       </div>
       <div id="post">
         <h1>titulo del blog</h1>
