Agregado el contenido adicional del blog

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
           parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempora provident incidunt commodi tenetur ipsum dolor sequi necessitatibus dolore neque?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia a ad ex veniam quis expedita earum ipsam harum, commodi nobis repellendus voluptates eaque explicabo libero nulla voluptate excepturi? Hic, quas!</p>
       </div>
     </div>
   </body>
