modifique la cabecera y el color del texto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Hyperblog
       </div>
       <div id="post">
-        <h1>titulo del blog</h1>
+        <h1>titulo de la pagina</h1>
         <p>
           parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
