agrege suscripcion, cambie la cabecera y puse el texto azul

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         Hyperblog
       </div>
       <div id="post">
-        <h1>titulo del blog</h1>
+        <h1>titulo del blog maestro</h1>
         <p>
           parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempora provident incidunt commodi tenetur ipsum dolor sequi necessitatibus dolore neque?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia a ad ex veniam quis expedita earum ipsam harum, commodi nobis repellendus voluptates eaque explicabo libero nulla voluptate excepturi? Hic, quas!</p>
+        <p>suscribete y dale like</p>
       </div>
     </div>
   </body>
