--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div id="cabecera">
-        Bienvenido a Hyperblog
+        Bienvenido a Hyperblog 2.0
       </div>
       <div id="post">
         <h1>titulo de la pagina</h1>
