agregando logo en el header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <div id="cabecera">
-       
-        Bienvenido a Hyperblog
+        <img src="imagenes/dragon.webp" alt="">
+        Bienvenido a Hyperblog 3.0.1.8973f
       </div>
       <div id="post">
         <h1>titulo de la pagina</h1>
