--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia a ad ex veniam quis expedita earum ipsam harum, commodi nobis repellendus voluptates eaque explicabo libero nulla voluptate excepturi? Hic, quas!</p>
         <p>suscribete y dale like</p>
       </div>
+      <footer>Hecho en platzi </footer>
     </div>
   </body>
 </html>
