Corrigiendo el texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div id="cabecera">
-        <img src="imagenes/dragon.webp" alt="">
+        <img src="imagenes/dragon.webp" alt="" />
         Bienvenido a Hyperblog 3.1.9531f
       </div>
       <div id="post">
@@ -19,11 +19,24 @@
           parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tempora provident incidunt commodi tenetur ipsum dolor sequi necessitatibus dolore neque?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia a ad ex veniam quis expedita earum ipsam harum, commodi nobis repellendus voluptates eaque explicabo libero nulla voluptate excepturi? Hic, quas!</p>
+        <p>
+          Ahora tenemos texto real y entendible y no un simple lorem sin ningun
+          tipo de sentido xdxdxd lololol
+        </p>
+        <p>
+          Oíd, mortales, el grito sagrado ¡Libertad, libertad, libertad! Oíd el
+          ruido de rotas cadenas Ved el trono a la noble igualdad Ya a su trono
+          dignísimo abrieron Las Provincias Unidas del Sud Y los libres del
+          mundo responden Al gran pueblo argentino, ¡salud! Al gran pueblo
+          argentino, ¡salud! Y los libres del mundo responden Al gran pueblo
+          argentino, ¡salud! Y los libres del mundo responden Al gran pueblo
+          argentino, ¡salud! Sean eternos los laureles Que supimos conseguir Que
+          supimos conseguir Coronados de gloria vivamos ¡O juremos con gloria
+          morir! ¡O juremos con gloria morir! ¡O juremos con gloria morir!
+        </p>
         <p>suscribete y dale like</p>
       </div>
-      <footer>Hecho en platzi </footer>
+      <footer>Hecho en platzi</footer>
     </div>
   </body>
 </html>
