--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div id="post">
         <h1>titulo de la pagina</h1>
         <p>
-          parrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
+          párrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
         </p>
         <p>
-          Ahora tenemos texto real y entendible y no un simple lorem sin ningun
+          Ahora tenemos texto real y entendible y no un simple lorem sin ningún
           tipo de sentido xdxdxd lololol
         </p>
         <p>
