cambio a entidades html en vez de tildes

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div id="post">
         <h1>titulo de la pagina</h1>
         <p>
-          párrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
+          p&aacute;rrafo del blog xd Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Ratione, suscipit.
         </p>
         <p>
-          Ahora tenemos texto real y entendible y no un simple lorem sin ningún
+          Ahora tenemos texto real y entendible y no un simple lorem sin ning&uacute;n
           tipo de sentido xdxdxd lololol
         </p>
         <p>
