--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div id="cabecera">
         <img src="imagenes/dragon.webp" alt="" />
-        Bienvenido a Hyperblog 3.1.9531f
+         Hyperblog 3.0 Es un blog del futuro
       </div>
       <div id="post">
         <h1>titulo de la pagina</h1>
